// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`story.MfaDeviceError 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c7 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c17 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 50%;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c21 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c21:active {
  opacity: 0.56;
}

.c21:hover,
.c21:focus {
  background: #651FFF;
}

.c21:active {
  background: #354AA4;
}

.c21:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c19 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c19::-ms-clear {
  display: none;
}

.c19::placeholder {
  opacity: 0.4;
}

.c19:read-only {
  cursor: not-allowed;
}

.c19:disabled {
  color: rgba(0,0,0,0.5);
}

.c18 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c15 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c12 {
  display: block;
  outline: none;
  width: 145px;
  height: 145px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  margin-top: 8px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c11 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c16 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c10 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c10 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c10 label {
  cursor: pointer;
  vertical-align: middle;
}

.c13 {
  border: 4px solid white;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      kind="danger"
    >
      some server error message
    </div>
    <div
      class="c8"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Authenticator App
        </label>
      </div>
    </div>
    <div
      class="c11"
      height="240px"
    >
      <img
        class="c12 c13"
        height="145px"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
        width="145px"
      />
      <div
        class="c14"
        color="text.secondary"
        font-size="1"
      >
        Scan the QR Code with any authenticator app and enter the generated code. We recommend
         
        <a
          class="c15"
          href="https://authy.com/download/"
          rel="noreferrer"
          target="_blank"
        >
          Authy
        </a>
        .
      </div>
    </div>
    <div
      class="c16"
      height="100"
    >
      <div
        class="c17"
        width="50%"
      >
        <label
          class="c18"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c19"
            color="text.primaryInverse"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="otp-device"
          />
        </label>
      </div>
      <div
        class="c20"
        width="50%"
      >
        <label
          class="c18"
          font-size="0"
        >
          Authenticator code
          <input
            autocomplete="one-time-code"
            class="c19"
            color="text.primaryInverse"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c21"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceOn 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 0px;
  width: 100%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c16 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c16::-ms-clear {
  display: none;
}

.c16::placeholder {
  opacity: 0.4;
}

.c16:read-only {
  cursor: not-allowed;
}

.c16:disabled {
  color: rgba(0,0,0,0.5);
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  display: block;
  outline: none;
  width: 220px;
  height: 154px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c13 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c9 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c9 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c9 label {
  cursor: pointer;
  vertical-align: middle;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Hardware Key
        </label>
      </div>
      <div
        class="c9"
      >
        <input
          type="radio"
        />
        <label>
          Authenticator App
        </label>
      </div>
    </div>
    <div
      class="c10"
      height="240px"
    >
      <img
        class="c11"
        height="154px"
        src="file_stub"
        width="220px"
      />
      <div
        class="c12"
        color="text.secondary"
        font-size="1"
      >
        We support a wide range of hardware devices including YubiKeys, Touch ID, watches, and more.
      </div>
    </div>
    <div
      class="c13"
      height="100"
    >
      <div
        class="c14"
        width="100%"
      >
        <label
          class="c15"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c16"
            color="text.primaryInverse"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="webauthn-device"
          />
        </label>
      </div>
    </div>
    <button
      class="c17"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceOtp 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c16 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 16px;
  width: 50%;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c20 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c20:active {
  opacity: 0.56;
}

.c20:hover,
.c20:focus {
  background: #651FFF;
}

.c20:active {
  background: #354AA4;
}

.c20:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c18 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c18::-ms-clear {
  display: none;
}

.c18::placeholder {
  opacity: 0.4;
}

.c18:read-only {
  cursor: not-allowed;
}

.c18:disabled {
  color: rgba(0,0,0,0.5);
}

.c17 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c14 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
}

.c11 {
  display: block;
  outline: none;
  width: 145px;
  height: 145px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  margin-top: 8px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c9 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c9 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c9 label {
  cursor: pointer;
  vertical-align: middle;
}

.c12 {
  border: 4px solid white;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Authenticator App
        </label>
      </div>
    </div>
    <div
      class="c10"
      height="240px"
    >
      <img
        class="c11 c12"
        height="145px"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
        width="145px"
      />
      <div
        class="c13"
        color="text.secondary"
        font-size="1"
      >
        Scan the QR Code with any authenticator app and enter the generated code. We recommend
         
        <a
          class="c14"
          href="https://authy.com/download/"
          rel="noreferrer"
          target="_blank"
        >
          Authy
        </a>
        .
      </div>
    </div>
    <div
      class="c15"
      height="100"
    >
      <div
        class="c16"
        width="50%"
      >
        <label
          class="c17"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c18"
            color="text.primaryInverse"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="otp-device"
          />
        </label>
      </div>
      <div
        class="c19"
        width="50%"
      >
        <label
          class="c17"
          font-size="0"
        >
          Authenticator code
          <input
            autocomplete="one-time-code"
            class="c18"
            color="text.primaryInverse"
            inputmode="numeric"
            placeholder="123 456"
            type="text"
            value=""
          />
        </label>
      </div>
    </div>
    <button
      class="c20"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.MfaDeviceWebauthn 1`] = `
.c1 {
  box-sizing: border-box;
  padding: 32px;
}

.c4 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c14 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-right: 0px;
  width: 100%;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 8px;
  width: 100%;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c3 {
  display: inline-block;
  transition: color 0.3s;
  margin-right: 16px;
  color: #FFFFFF;
  font-size: 30px;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c16 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c16::-ms-clear {
  display: none;
}

.c16::placeholder {
  opacity: 0.4;
}

.c16:read-only {
  cursor: not-allowed;
}

.c16:disabled {
  color: rgba(0,0,0,0.5);
}

.c15 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  display: block;
  outline: none;
  width: 220px;
  height: 154px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  color: rgba(255,255,255,0.56);
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 14px;
  line-height: 24px;
  text-transform: uppercase;
  margin: 0px;
  margin-bottom: 4px;
  color: #FFFFFF;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 12px;
  margin: 0px;
  color: rgba(255,255,255,0.56);
  text-align: center;
}

.c2 {
  box-sizing: border-box;
  margin-bottom: 16px;
  display: flex;
  align-items: center;
}

.c10 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  height: 240px;
  border-radius: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.c13 {
  box-sizing: border-box;
  height: 100px;
  display: flex;
  align-items: center;
}

.c9 {
  display: inline-block;
  margin-right: 16px;
  cursor: pointer;
}

.c9 input {
  cursor: pointer;
  vertical-align: middle;
  margin: 0 8px 0px 0;
}

.c9 label {
  cursor: pointer;
  vertical-align: middle;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <span
        class="c3 icon icon-arrow_back "
        color="light"
        font-size="30"
        style="cursor: pointer;"
      />
      <div
        class="c4"
      >
        <div
          class="c5"
          color="text.secondary"
        >
          Step 2 of 2
        </div>
        <div
          class="c6"
          color="light"
        >
          Set Two-Factor Device
        </div>
      </div>
    </div>
    <div
      class="c7"
      color="light"
    >
      Two-Factor Method
    </div>
    <div
      class="c8"
    >
      <div
        class="c9"
      >
        <input
          checked=""
          type="radio"
        />
        <label>
          Hardware Key
        </label>
      </div>
    </div>
    <div
      class="c10"
      height="240px"
    >
      <img
        class="c11"
        height="154px"
        src="file_stub"
        width="220px"
      />
      <div
        class="c12"
        color="text.secondary"
        font-size="1"
      >
        We support a wide range of hardware devices including YubiKeys, Touch ID, watches, and more.
      </div>
    </div>
    <div
      class="c13"
      height="100"
    >
      <div
        class="c14"
        width="100%"
      >
        <label
          class="c15"
          font-size="0"
        >
          Device name
          <input
            autocomplete="off"
            class="c16"
            color="text.primaryInverse"
            inputmode="text"
            placeholder="Name"
            type="text"
            value="webauthn-device"
          />
        </label>
      </div>
    </div>
    <button
      class="c17"
      kind="primary"
      width="100%"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`story.PasswordOnlyError 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c5 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c8:disabled {
  color: rgba(0,0,0,0.5);
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c2 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="password"
      >
        <div
          class="c4"
          color="light"
        >
          Set A Password
        </div>
        <div
          class="c5"
          kind="danger"
        >
          some server error message
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Username
            <input
              autocomplete="off"
              class="c8"
              color="text.primaryInverse"
              inputmode="text"
              readonly=""
              type="text"
              value="john@example.com"
            />
          </label>
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Password
            <input
              autocomplete="off"
              class="c8"
              color="text.primaryInverse"
              inputmode="text"
              placeholder="Password"
              type="password"
              value=""
            />
          </label>
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Confirm Password
            <input
              autocomplete="off"
              class="c8"
              color="text.primaryInverse"
              inputmode="text"
              placeholder="Confirm Password"
              type="password"
              value=""
            />
          </label>
        </div>
        <button
          class="c9"
          kind="primary"
          width="100%"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`story.PrimaryPasswordlessError 1`] = `
.c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c5 a {
  color: #FFFFFF;
}

.c1 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding-bottom: 24px;
  padding-top: 32px;
  padding-left: 32px;
  padding-right: 32px;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  margin-top: 16px;
  text-align: center;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 4px;
  width: 100%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: none;
  text-decoration: underline;
}

.c11:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c8:disabled {
  color: rgba(0,0,0,0.5);
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 18px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
}

.c2 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c2 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<form
  class="c0"
  width="464"
>
  <div
    class="c1"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="passwordless"
      >
        <div
          class="c4"
          color="light"
        >
          Set A Passwordless Device
        </div>
        <div
          class="c5"
          kind="danger"
        >
          some server error message
        </div>
        <div
          class="c6"
          width="100%"
        >
          <label
            class="c7"
            font-size="0"
          >
            Device name
            <input
              autocomplete="off"
              class="c8"
              color="text.primaryInverse"
              inputmode="text"
              placeholder="Name"
              type="text"
              value="passwordless-device"
            />
          </label>
        </div>
        <button
          class="c9"
          kind="primary"
          width="100%"
        >
          Submit
        </button>
        <div
          class="c10"
        >
          <button
            class="c11"
            kind="text"
          >
            Use password
          </button>
        </div>
      </div>
    </div>
  </div>
</form>
`;
